@@ -103,8 +103,10 @@ sub _open_file {
         my $current_mode = ( stat $self->{filename} )[2] & 07777;
         if ( $current_mode ne $self->{permissions} ) {
             chmod $self->{permissions}, $self->{filename}
-                or die
-                "Cannot chmod $self->{filename} to $self->{permissions}: $!";
+                or die sprintf(
+                'Cannot chmod %s to %04o: %s',
+                $self->{filename}, $self->{permissions} & 07777, $!
+                );
         }
 
         $self->{chmodded} = 1;
